[gd_scene load_steps=4 format=3 uid="uid://dx5dwnnoc3oer"]

[ext_resource type="Theme" uid="uid://cldijs2xqwyow" path="res://Themes/light_blue_theme.tres" id="1_ovllr"]
[ext_resource type="Texture2D" uid="uid://cio7l366r3cyf" path="res://Assets/newButton.png" id="2_ovllr"]
[ext_resource type="Script" uid="uid://cxp12qgkir8xm" path="res://Scenes/Main_Menu_Button/main_menu_button.gd" id="2_yope0"]

[node name="MainMenuButton" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -45.0
offset_right = 60.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_ovllr")
texture_normal = ExtResource("2_ovllr")
script = ExtResource("2_yope0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="NameLabel" type="Label" parent="MarginContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 1
text = "Beans"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
